--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -6,6 +6,7 @@
                 <li>{{gender}}</li>
                 <li>{{type}}</li>
                 <li>{{breed}}</li>
+                <li>{{date}}</li>
             </ul>
             <a href="/animals/{{id}}">read more...</a>
          {{/each}}
